--- a/deploy/30-apm/compose.yaml
+++ b/deploy/30-apm/compose.yaml
@@ -1,4 +1,4 @@
-name: jaeger
+name: apm
 
 services:
   elasticsearch:
@@ -10,7 +10,7 @@ services:
       - node.name=es
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms1g -Xmx1g
-      - ELASTIC_PASSWORD=${JAEGER_ELASTIC_PASSWORD}
+      - ELASTIC_PASSWORD=${APM_ELASTIC_PASSWORD}
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=false
     # ports: ["9200:9200"]
@@ -35,9 +35,10 @@ services:
       - TELEMETRY_ALLOWCHANGINGOPTINSTATUS=false
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=${JAEGER_ELASTIC_PASSWORD}
+      - ELASTICSEARCH_PASSWORD=${APM_ELASTIC_PASSWORD}
+      - xpack.fleet.packages=[{"name":"apm","version":"latest"}]
     ports:
-      - 5601:5601
+      - 5602:5601
     healthcheck:
       test:
         [
@@ -51,41 +52,27 @@ services:
       elasticsearch:
         condition: service_healthy
 
-  collector:
-    image: jaegertracing/jaeger-collector:1.60
+  apm-server:
+    image: docker.elastic.co/apm/apm-server:8.15.0
     restart: always
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-      - ES_SERVER_URLS=http://elasticsearch:9200
-      - ES_USERNAME=elastic
-      - ES_PASSWORD=${JAEGER_ELASTIC_PASSWORD}
-    ports: # https://www.jaegertracing.io/docs/1.60/deployment/#collector
-      - 4317:4317 # OTLP over gRPC
-      - 4318:4318 # OTLP over HTTP
-    healthcheck: # https://github.com/jaegertracing/jaeger/blob/0524ae6df8acac17e8ed52af9b86e6dee85a5e5e/cmd/internal/status/command.go
-      test: ["CMD-SHELL", "/go/bin/collector-linux status"]
-      interval: 10s
-      timeout: 10s
-      retries: 30
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-
-  query:
-    image: jaegertracing/jaeger-query:1.60
-    restart: always
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-      - ES_SERVER_URLS=http://elasticsearch:9200
-      - ES_USERNAME=elastic
-      - ES_PASSWORD=${JAEGER_ELASTIC_PASSWORD}
-    ports: # https://www.jaegertracing.io/docs/1.60/deployment/#query-service--ui
-      - 16686:16686 # serve frontend
-    healthcheck: # https://github.com/jaegertracing/jaeger/blob/0524ae6df8acac17e8ed52af9b86e6dee85a5e5e/cmd/internal/status/command.go
-      test: ["CMD-SHELL", "/go/bin/query-linux status"]
-      interval: 10s
-      timeout: 10s
-      retries: 30
+    command:
+      - -e
+      - -E=max_procs=4
+      - -E=apm-server.auth.secret_token=${APM_SECRET_TOKEN}
+      - -E=output.elasticsearch.hosts=["http://elasticsearch:9200"]
+      - -E=output.elasticsearch.username=elastic
+      - -E=output.elasticsearch.password=${APM_ELASTIC_PASSWORD}
+    ports:
+      - 8200:8200
+    # healthcheck:
+    #   test:
+    #     [
+    #       "CMD-SHELL",
+    #       'curl -s -H "Authorization: Bearer ${APM_SECRET_TOKEN}" http://localhost:8200 | grep -q ''publish_ready": true''',
+    #     ]
+    #   interval: 10s
+    #   timeout: 10s
+    #   retries: 30
     depends_on:
       elasticsearch:
         condition: service_healthy
