--- a/deploy/30-apm/.env.example
+++ b/deploy/30-apm/.env.example
@@ -2,6 +2,7 @@
 
 # ----- elasticsearch -----
 APM_ELASTIC_PASSWORD=DVPMuwCOpH5iOPDFnjd5
+APM_KIBANA_PASSWORD=46cNx1tTUQFNWVdwvSCL
 
 # ----- apm-server -----
 APM_SECRET_TOKEN=w8bQvEP9jKujYmfvK63P
