CHG: (deploy) minimal apm_writer privileges

--- a/deploy/30-apm/.env.example
+++ b/deploy/30-apm/.env.example
@@ -3,6 +3,7 @@
 # ----- elasticsearch -----
 APM_ELASTIC_PASSWORD=DVPMuwCOpH5iOPDFnjd5
 APM_KIBANA_PASSWORD=46cNx1tTUQFNWVdwvSCL
+APM_WRITER_PASSWORD=DiyVkm91cfhPTGtdQyfR
 
 # ----- apm-server -----
 APM_SECRET_TOKEN=w8bQvEP9jKujYmfvK63P
