UPG: (deploy) docker compose image tags

--- a/deploy/10-prometheus/.env.example
+++ b/deploy/10-prometheus/.env.example
@@ -1,4 +1,9 @@
 # https://docs.docker.com/compose/compose-file/05-services/#env_file-format
 
+# ----- images -----
+PROMETHEUS_IMAGE_TAG=v2.53.2
+GRAFANA_IMAGE_TAG=11.2.0
+CADVISOR_IMAGE_TAG=v0.49.1
+
 # ----- grafana -----
 GRAFANA_ADMIN_PASSWORD=KejTCKmMBIPxBm1m7h4f
