--- a/deploy/30-apm/.env.example
+++ b/deploy/30-apm/.env.example
@@ -1,5 +1,8 @@
 # https://docs.docker.com/compose/compose-file/05-services/#env_file-format
 
+# ----- images -----
+ELASTICSEARCH_IMAGE_TAG=8.15.1
+
 # ----- elasticsearch -----
 APM_ELASTIC_PASSWORD=DVPMuwCOpH5iOPDFnjd5
 APM_KIBANA_PASSWORD=46cNx1tTUQFNWVdwvSCL
