--- a/deploy/90-application/compose.yaml
+++ b/deploy/90-application/compose.yaml
@@ -2,7 +2,7 @@ name: app
 
 services:
   mysql:
-    image: mysql:8.4.2
+    image: mysql:${MYSQL_IMAGE_TAG}
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
@@ -24,7 +24,7 @@ services:
       retries: 30
 
   redis:
-    image: redis:7.2.5
+    image: redis:${REDIS_IMAGE_TAG}
     command:
       - --maxmemory
       - 1gb
@@ -43,13 +43,19 @@ services:
       retries: 30
 
   server:
-    image: ghcr.io/whoisnian/tracing-benchmark:v0.0.1
+    image: ghcr.io/whoisnian/tracing-benchmark:${SERVER_IMAGE_TAG}
     restart: always
     environment:
       - CFG_LISTEN_ADDR=0.0.0.0:8080
       - CFG_MYSQL_DSN=${CFG_MYSQL_DSN}
       - CFG_REDIS_URI=${CFG_REDIS_URI}
+      - CFG_TRACE_OTLP_ENDPOINT=${CFG_TRACE_OTLP_ENDPOINT}
+      - CFG_TRACE_APM_ENDPOINT=${CFG_TRACE_APM_ENDPOINT}
+      - CFG_TRACE_APM_SECRET_TOKEN=${CFG_TRACE_APM_SECRET_TOKEN}
+      - CFG_TRACE_BACKEND=${CFG_TRACE_BACKEND}
     ports: ["8080:8080"]
+    extra_hosts: # https://github.com/moby/moby/blob/42f40b1d6dd7562342f832b9cd2adf9e668eeb76/daemon/container_operations.go#L118
+      - host.docker.internal:host-gateway
     depends_on:
       mysql:
         condition: service_healthy
