--- a/deploy/20-jaeger/.env.example
+++ b/deploy/20-jaeger/.env.example
@@ -1,4 +1,8 @@
 # https://docs.docker.com/compose/compose-file/05-services/#env_file-format
 
+# ----- images -----
+ELASTICSEARCH_IMAGE_TAG=8.15.1
+JAEGER_IMAGE_TAG=1.61.0
+
 # ----- elasticsearch -----
 JAEGER_ELASTIC_PASSWORD=izFqoeyrYJMBjyrYt5F2
