--- a/deploy/30-apm/compose.yaml
+++ b/deploy/30-apm/compose.yaml
@@ -2,7 +2,7 @@ name: apm
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTICSEARCH_IMAGE_TAG}
     restart: always
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
@@ -25,7 +25,7 @@ services:
       retries: 120
 
   post-elasticsearch: # https://github.com/elastic/elasticsearch/blob/d55f984299e0e88dee72ebd8255f7ff130859ad0/docs/reference/setup/install/docker/docker-compose.yml
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTICSEARCH_IMAGE_TAG}
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
     # https://www.elastic.co/guide/en/observability/8.15/apm-privileges-to-publish-events.html
@@ -43,7 +43,7 @@ services:
         condition: service_healthy
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.15.0
+    image: docker.elastic.co/kibana/kibana:${ELASTICSEARCH_IMAGE_TAG}
     restart: always
     volumes:
       - kibana_data:/usr/share/kibana/data
@@ -71,7 +71,7 @@ services:
         condition: service_completed_successfully
 
   apm-server:
-    image: docker.elastic.co/apm/apm-server:8.15.0
+    image: docker.elastic.co/apm/apm-server:${ELASTICSEARCH_IMAGE_TAG}
     restart: always
     command:
       - -e
