--- a/deploy/90-application/.env.example
+++ b/deploy/90-application/.env.example
@@ -1,5 +1,10 @@
 # https://docs.docker.com/compose/compose-file/05-services/#env_file-format
 
+# ----- images -----
+MYSQL_IMAGE_TAG=8.4.2
+REDIS_IMAGE_TAG=7.2.5
+SERVER_IMAGE_TAG=v0.0.2
+
 # ----- mysql -----
 MYSQL_DATABASE=testdb
 MYSQL_ROOT_PASSWORD=BzuVh7F6tNmgb9ugDNwp
@@ -10,3 +15,7 @@ REDIS_PASSWORD=qGqvYJ9qBsw4jN7flGl6
 # ----- server -----
 CFG_MYSQL_DSN="root:BzuVh7F6tNmgb9ugDNwp@tcp(mysql:3306)/testdb?charset=utf8mb4&parseTime=True&loc=UTC"
 CFG_REDIS_URI="redis://default:qGqvYJ9qBsw4jN7flGl6@redis:6379/0"
+CFG_TRACE_OTLP_ENDPOINT=http://host.docker.internal:4318
+CFG_TRACE_APM_ENDPOINT=http://host.docker.internal:8200
+CFG_TRACE_APM_SECRET_TOKEN=w8bQvEP9jKujYmfvK63P
+CFG_TRACE_BACKEND=otlp # none/otlp/apm
