--- a/deploy/20-jaeger/compose.yaml
+++ b/deploy/20-jaeger/compose.yaml
@@ -62,9 +62,12 @@ services:
       - ES_USE_ILM=true
       - ES_USE_ALIASES=true
       - ES_CREATE_INDEX_TEMPLATES=false
+      # - COLLECTOR_QUEUE_SIZE=5000 # default 2000
+      # - COLLECTOR_NUM_WORKERS=100 # default 50
     ports: # https://www.jaegertracing.io/docs/1.61/deployment/#collector
       - 4317:4317 # OTLP over gRPC
       - 4318:4318 # OTLP over HTTP
+      - 14269:14269 # curl -s 127.0.0.1:14269/metrics | grep -P '(tracing-benchmark-docker|^jaeger_collector_spans_dropped_total)'
     healthcheck: # https://github.com/jaegertracing/jaeger/blob/0524ae6df8acac17e8ed52af9b86e6dee85a5e5e/cmd/internal/status/command.go
       test: ["CMD-SHELL", "/go/bin/collector-linux status"]
       interval: 10s
