--- a/deploy/90-application/.env.example
+++ b/deploy/90-application/.env.example
@@ -3,7 +3,7 @@
 # ----- images -----
 MYSQL_IMAGE_TAG=8.4.3
 REDIS_IMAGE_TAG=7.4.1
-SERVER_IMAGE_TAG=v0.0.3
+SERVER_IMAGE_TAG=v0.0.4
 
 # ----- mysql -----
 MYSQL_DATABASE=testdb
@@ -18,4 +18,7 @@ CFG_REDIS_URI="redis://default:qGqvYJ9qBsw4jN7flGl6@redis:6379/0"
 CFG_TRACE_OTLP_ENDPOINT=http://host.docker.internal:4318
 CFG_TRACE_APM_ENDPOINT=http://host.docker.internal:8200
 CFG_TRACE_APM_SECRET_TOKEN=w8bQvEP9jKujYmfvK63P
-CFG_TRACE_BACKEND=none # none/otlp/apm
+CFG_TRACE_ZIPKIN_ENDPOINT=http://host.docker.internal:9411/api/v2/spans
+CFG_TRACE_BACKEND=none # none/otlp/apm/zipkin/skywalking
+SW_AGENT_NAME=tracing-benchmark
+SW_AGENT_REPORTER_GRPC_BACKEND_SERVICE=host.docker.internal:11800
