--- a/deploy/30-apm/compose.yaml
+++ b/deploy/30-apm/compose.yaml
@@ -75,9 +75,11 @@ services:
   apm-server:
     image: docker.elastic.co/apm/apm-server:${ELASTICSEARCH_IMAGE_TAG}
     restart: always
+    environment:
+      - GOMAXPROCS=2
     command:
       - -e
-      - -E=max_procs=4
+      - -E=max_procs=2
       - -E=apm-server.auth.secret_token=${APM_SECRET_TOKEN}
       - -E=apm-server.expvar.enabled=true # curl -s 127.0.0.1:8200/debug/vars | grep apm-server.processor | sort
       - -E=output.elasticsearch.hosts=["http://elasticsearch:9200"]
@@ -85,15 +87,11 @@ services:
       - -E=output.elasticsearch.password=${APM_WRITER_PASSWORD}
     ports:
       - 8200:8200
-    # healthcheck:
-    #   test:
-    #     [
-    #       "CMD-SHELL",
-    #       'curl -s -H "Authorization: Bearer ${APM_SECRET_TOKEN}" http://localhost:8200 | grep -q ''publish_ready": true''',
-    #     ]
-    #   interval: 10s
-    #   timeout: 10s
-    #   retries: 30
+    healthcheck: # https://medium.com/bash-tips-and-tricks/part01-tcp-udp-request-with-a-native-bash-feature-and-without-curl-wget-9dcef59c30aa
+      test: ["CMD-SHELL", "timeout 5s bash -c ':> /dev/tcp/localhost/8200' || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 30
     depends_on:
       post-elasticsearch:
         condition: service_completed_successfully
