FIX: (deploy) avoid jaeger /tmp anonymous volume

--- a/deploy/20-jaeger/compose.yaml
+++ b/deploy/20-jaeger/compose.yaml
@@ -36,6 +36,8 @@ services:
       - ES_PASSWORD=${JAEGER_ELASTIC_PASSWORD}
     volumes:
       - ./config.yaml:/cmd/jaeger/config.yaml
+    tmpfs:
+      - /tmp
     command: ["--config", "/cmd/jaeger/config.yaml"]
     ports: # https://www.jaegertracing.io/docs/2.1/apis/#default-ports
       - 4317:4317 # OTLP over gRPC
